--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -189,10 +189,9 @@ a:hover
 
 <div class="row">
   <div class="column">
-  <a href="https://haydenjhanc.github.io/Portfolio/LexingtonRent.html">
-	<img src="RentInLex-1.png" alt="RentInLex-1.png" title="Click Image For More Details" style="width:100%">
+  <a href="https://haydenjhanc.github.io/Portfolio/Killarney.html">
+	<img src="1000103925.jpg" alt="1000103925.jpg" title="Click Image For More Details" style="width:100%">
   </a>
-  </div>
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/WeimarElections.html">
 	<img src="Elections_3.gif" alt="Elections_3.gif" title="Click Image For More Details" style="width:100%">
@@ -210,7 +209,7 @@ a:hover
 	<img src="KCM.png" alt="KCM.png" title="Click Image For More Details" style="width:100%">
   </a>
 </div>
-
+</div>
 
 <div class="content-section">
 	<div class="text-content">	
