--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -192,15 +192,17 @@ a:hover
   <a href="https://haydenjhanc.github.io/Portfolio/Killarney.html">
 	<img src="1000103925.jpg" alt="1000103925.jpg" title="Click Image For More Details" style="width:100%">
   </a>
+  </div>
+  <div class="column">
+  <a href="https://haydenjhanc.github.io/Portfolio/LexingtonRent.html">
+	<img src="RentInLex-1.png" alt="RentInLex-1.png" title="Click Image For More Details" style="width:100%">
+  </a>
+  </div>
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/WeimarElections.html">
 	<img src="Elections_3.gif" alt="Elections_3.gif" title="Click Image For More Details" style="width:100%">
   </a>
   </div>
-  <div class="column">
-  <a href="https://haydenjhanc.github.io/Portfolio/Killarney.html">
-	<img src="1000103925.jpg" alt="1000103925.jpg" title="Click Image For More Details" style="width:100%">
-  </a>
 </div>
 
 <div class="row">
@@ -208,7 +210,7 @@ a:hover
   <a href="https://haydenjhanc.github.io/Portfolio/CumberlandMts.html">
 	<img src="KCM.png" alt="KCM.png" title="Click Image For More Details" style="width:100%">
   </a>
-</div>
+  </div>
 </div>
 
 <div class="content-section">
