--- a/HancockFarms2022.html
+++ b/HancockFarms2022.html
@@ -16,7 +16,7 @@ body {
 }
 
 .header-image {
-    background-image: url("C74C8A12-2539-40B0-87E1-05D673509CF6.jpg");
+    background-image: url("BannerImage.jpg");
     background-size: cover;                      
     background-repeat: no-repeat;
     background-position: center center; 
