--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -16,7 +16,7 @@ body {
 }
 
 .header-image {
-    background-image: url("C74C8A12-2539-40B0-87E1-05D673509CF6.jpg");
+    background-image: url("BannerImage.jpg");
     background-size: cover;                      
     background-repeat: no-repeat;
     background-position: center center; 
@@ -158,12 +158,14 @@ a:hover
 
 <h4><a href="Hayden_Resume.pdf">Download Resume (PDF)</a></h4>
 
+<h2>Click on images for more details and full resolution</h2>
+
 <h1>2022</h1>
 
 <div class="row">
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/HancockFarms2022.html">
-	<img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png" title="Click Image For More Details" style="width:100%">
+	<img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png" title="Hancock Farms" style="width:100%">
   </a>
   </div>
 </div>
@@ -173,17 +175,17 @@ a:hover
 <div class="row">
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/BivariateCropAnalysis.html">
-	<img src="Bivaraiate_309_1(1).png" alt="Bivaraiate_309_1(1).png" title="Click Image For More Details" style="width:100%">
+	<img src="Bivaraiate_309_1(1).png" alt="Bivaraiate_309_1(1).png" title="Bivariate Crop Analysis" style="width:100%">
   </a>
   </div>
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/UrbanDevDPRK.html">
-	<img src="Tracking Urban Development in the D.P.R.K.(4).png" alt="Tracking Urban Development in the D.P.R.K.(4).png" title="Click Image For More Details" style="width:100%">
+	<img src="Tracking Urban Development in the D.P.R.K.(4).png" alt="Tracking Urban Development in the D.P.R.K.(4).png" title="Tracking Urban Development in the D.P.R.K." style="width:100%">
   </a>
   </div>
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/LexingtonBattle.html">
-	<img src="Lexington_1920(1).png" alt="Lexington_1920(1).png" title="Click Image For More Details" style="width:100%">
+	<img src="Lexington_1920(1).png" alt="Lexington_1920(1).png" title="The Second Battle of Lexington" style="width:100%">
   </a>
   </div>
 </div>
@@ -193,17 +195,17 @@ a:hover
 <div class="row">
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/Killarney.html">
-	<img src="1000103925.jpg" alt="1000103925.jpg" title="Click Image For More Details" style="width:100%">
+	<img src="Killarney.jpg" alt="Killarney.jpg" title="Killarney National Park" style="width:100%">
   </a>
   </div>
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/LexingtonRent.html">
-	<img src="RentInLex-1.png" alt="RentInLex-1.png" title="Click Image For More Details" style="width:100%">
+	<img src="RentInLex-1.png" alt="RentInLex-1.png" title="Rent and Urban Cover Analysis in Lexington, KY" style="width:100%">
   </a>
   </div>
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/WeimarElections.html">
-	<img src="Elections_3.gif" alt="Elections_3.gif" title="Click Image For More Details" style="width:100%">
+	<img src="Elections_3.gif" alt="Elections_3.gif" title="Weimar Elections" style="width:100%">
   </a>
   </div>
 </div>
@@ -211,7 +213,7 @@ a:hover
 <div class="row">
 <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/CumberlandMts.html">
-	<img src="KCM.png" alt="KCM.png" title="Click Image For More Details" style="width:100%">
+	<img src="KCM.png" alt="KCM.png" title="Cumberland Mountians of Kentucky" style="width:100%">
   </a>
   </div>
 </div>
@@ -241,7 +243,7 @@ a:hover
 <div class="row">
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/Hokkaido.html">
-	<img src="Hokkaido.png" alt="Hokkaido.png" title="Click Image For More Details" style="width:100%">
+	<img src="Hokkaido.png" alt="Hokkaido.png" title="Hokkaido" style="width:100%">
   </a>
   </div>
 	
