--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -174,7 +174,7 @@ a:hover
 <div class="row">
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/Killarney.html">
-	<img src="Killarney.jpg" alt="Killarney.jpg" title="Killarney National Park" style="width:100%">
+	<img src="KillarneyNP_1.jpg" alt="KillarneyNP_1.jpg" title="Killarney National Park" style="width:100%">
   </a>
   </div>
   <div class="column">
