--- a/Killarney.html
+++ b/Killarney.html
@@ -80,10 +80,10 @@ a:hover {
 <p>In anticipation of my upcoming trip to Ireland, I made a map of one of my planned destinations, Killarney National Park. I made sure to include Irish translations for most features on this map, as the Irish language is currently fighting endangermant.</p>
 
 <div class="big-image">
-<img src="1000103925.jpg" alt="1000103925.jpg">
+<img src="KillarneyNP_1.png" alt="KillarneyNP_1.png">
 </div>
 
-<h4><a href="1000103925.jpg">Download</a></h4>
+<h4><a href="KillarneyNP_1.png">Download</a></h4>
 
 </body>
 </html>
