--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -168,6 +168,7 @@ a:hover
 	<img src="Hokkaido.png" alt="Hokkaido.png" title="Hokkaido" style="width:100%">
   </a>
   </div>
+</div>
 
 <h1>2024</h1>
 
