--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -132,7 +132,9 @@ a:hover
 .column {
   float: left;
   width: 33.33%;
-  padding: 5px;
+  width: 400px;
+  height: auto;
+  padding: 8px;
   transition: 0.3s ease-in-out;
 }
 .column:hover{
