--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -7,7 +7,7 @@
     
 <style>  
 body {
-    font-family: Georgia, serif;
+    font-family: Trebuchet MS, sans-serif;
     background-color: #0b0e28;
     color: white;
     text-shadow: 2px 2px 4px #000000;
@@ -22,7 +22,7 @@ body {
     background-position: center center; 
     border-radius: 5px;
     color: #eceada;
-    font-family: Georgia, serif;
+    font-family: Gill Sans, sans-serif;
     box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
     text-align: center;
     padding: 10px;
@@ -31,13 +31,13 @@ body {
 .header-image h1 {
     font-size: 2.5em;
     text-shadow: 2px 2px 4px #000000;
-    font-family: Georgia, serif;
+    font-family: Trebuchet MS, sans-serif;
 }
 
 .subtitle {
     font-size: 1.2em;
     text-shadow: 2px 2px 4px #000000;
-    font-family: Georgia, serif;
+    font-family: Trebuchet MS, sans-serif;
 }
 	    
 .content-section {
@@ -46,7 +46,7 @@ body {
     justify-content: center;
     gap: 20px;
     padding: 20px;
-    font-family: Georgia, serif;
+    font-family: Trebuchet MS, sans-serif;
 }
 
 .content-section img {
@@ -65,7 +65,7 @@ body {
 
 .text-content h2 {
     color: #eceada;
-    font-family: Georgia, serif;
+    font-family: Trebuchet MS, sans-serif;
 }
 
 a:link 
@@ -101,7 +101,7 @@ a:hover
 .footer {
     background-color: #282829;
     color: #d2d0d0;
-    font-family: Georgia, serif;
+    font-family: Trebuchet MS, sans-serif;
     text-align: center;
     padding: 5px;
     border-radius: 5px;
