--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -132,9 +132,8 @@ a:hover
 .column {
   float: left;
   width: 33.33%;
-  width: 400px;
-  height: auto;
   padding: 8px;
+  image-resolution: 5dpi;
   transition: 0.3s ease-in-out;
 }
 .column:hover{
@@ -145,6 +144,7 @@ a:hover
   content: "";
   clear: both;
   display: table;
+  
 }
 </style>
 
