--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -133,7 +133,7 @@ a:hover
   float: left;
   width: 33.33%;
   padding: 8px;
-  image-resolution: 5dpi;
+  max-height: 700px
   transition: 0.3s ease-in-out;
 }
 .column:hover{
