--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -166,7 +166,7 @@ a:hover
 <div class="row">
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/Hokkaido.html">
-	<img src="Hokkaido.png" alt="Hokkaido.png" title="Hokkaido" style="width:100%">
+	<img src="Hokkaido_Compressed.png" alt="Hokkaido.png" title="Hokkaido" style="width:100%">
   </a>
   </div>
 </div>
@@ -176,12 +176,12 @@ a:hover
 <div class="row">
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/Killarney.html">
-	<img src="KillarneyNP_1.png" alt="KillarneyNP_1.png" title="Killarney National Park" style="width:100%">
+	<img src="KillarneyNP_1_Compressed.png" alt="KillarneyNP_1_Compressed.png" title="Killarney National Park" style="width:100%">
   </a>
   </div>
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/LexingtonRent.html">
-	<img src="RentInLex-1.png" alt="RentInLex-1.png" title="Rent and Urban Cover Analysis in Lexington, KY" style="width:100%">
+	<img src="RentInLex-1_Compressed.png" alt="RentInLex-1_Compressed.png" title="Rent and Urban Cover Analysis in Lexington, KY" style="width:100%">
   </a>
   </div>
   <div class="column">
@@ -194,7 +194,7 @@ a:hover
 <div class="row">
 <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/CumberlandMts.html">
-	<img src="KCM.png" alt="KCM.png" title="Cumberland Mountians of Kentucky" style="width:100%">
+	<img src="KCM_Compressed.png" alt="KCM_Compressed.png" title="Cumberland Mountians of Kentucky" style="width:100%">
   </a>
   </div>
 </div>
@@ -224,17 +224,17 @@ a:hover
 <div class="row">
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/BivariateCropAnalysis.html">
-	<img src="Bivaraiate_309_1(1).png" alt="Bivaraiate_309_1(1).png" title="Bivariate Crop Analysis" style="width:100%">
+	<img src="Bivaraiate_309_1_Compressed.png" alt="Bivaraiate_309_1_Compressed.png" title="Bivariate Crop Analysis" style="width:100%">
   </a>
   </div>
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/UrbanDevDPRK.html">
-	<img src="Tracking Urban Development in the D.P.R.K.(4).png" alt="Tracking Urban Development in the D.P.R.K.(4).png" title="Tracking Urban Development in the D.P.R.K." style="width:100%">
+	<img src="Tracking Urban Development in the D.P.R.K._Compressed.png" alt="Tracking Urban Development in the D.P.R.K._Compressed.png" title="Tracking Urban Development in the D.P.R.K." style="width:100%">
   </a>
   </div>
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/LexingtonBattle.html">
-	<img src="Lexington_1920(1).png" alt="Lexington_1920(1).png" title="The Second Battle of Lexington" style="width:100%">
+	<img src="Lexington_1920(1)_Compressed.png" alt="Lexington_1920(1)_Compressed.png" title="The Second Battle of Lexington" style="width:100%">
   </a>
   </div>
 </div>
@@ -244,7 +244,7 @@ a:hover
 <div class="row">
   <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/HancockFarms2022.html">
-	<img src="Hancock_Farms_Censored.png" alt="Hancock_Farms_Censored.png" title="Hancock Farms" style="width:100%">
+	<img src="Hancock_Farms_Censored_Compressed.png" alt="Hancock_Farms_Censored_Compressed.png" title="Hancock Farms" style="width:100%">
   </a>
   </div>
 </div>
