--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -157,7 +157,7 @@ a:hover
     <p>Email: hayden.hancock.813@gmail.com</p>
 </div>
 
-<h4><a href="Hayden_Resume.pdf">Download Resume (PDF)</a></h4>
+<h4><a href="Hayden_Resume-2.pdf">Download Resume (PDF)</a></h4>
 
 <h2>Click on images for more details and full resolution</h2>
 
