--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -190,11 +190,16 @@ a:hover
   </a>
   </div>
 </div>
-
+Analyzing Remote Sensing Vegetation Indexes to Optimize Corn and Soybean Yield(1).png
 <div class="row">
 <div class="column">
   <a href="https://haydenjhanc.github.io/Portfolio/CumberlandMts.html">
 	<img src="KCM_Compressed.png" alt="KCM_Compressed.png" title="Cumberland Mountians of Kentucky" style="width:100%">
+  </a>
+  </div>
+<div class="column">
+  <a href="https://haydenjhanc.github.io/Portfolio/CropYieldStudy.html">
+	<img src="Analyzing Remote Sensing Vegetation Indexes to Optimize Corn and Soybean Yield_Compressed.png" alt="Analyzing Remote Sensing Vegetation Indexes to Optimize Corn and Soybean Yield_Compressed.png" title="Analyzing Vegetation Indexes to Optimize Corn and Soybean Yield" style="width:100%">
   </a>
   </div>
 </div>
