--- a/WeimarElections.html
+++ b/WeimarElections.html
@@ -76,7 +76,7 @@ a:hover {
 <h4><a href="https://haydenjhanc.github.io/Portfolio/HaydenPortfolio.html">Return to Portfolio</a></h4>
 	
 <h2>Weimar Republic Elections</h2>
-<h3>Dr. Hamilton, HIS 499 Spring 2024>Dr. Zook, GEO 109 (Digital Mapping) Fall 2022</h3>
+<h3>Dr. Hamilton, HIS 499 Spring 2024</h3>
 <p>Th capstone paper for my History major was about analyzing the popularity of the KPD in the short-lived German (Weimar) republic. For this, I collected the data for each parties' Wahlkreise vote in each Reichstag election in a speadsheet and mapped them out, creating this informative graphic. </p>
 
 <div class="big-image">
