--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -16,7 +16,7 @@ body {
 }
 
 .header-image {
-    background-image: url("BannerImage.jpg");
+    background-image: url("20240626_153625.jpg");
     background-size: cover;                      
     background-repeat: no-repeat;
     background-position: center center; 
