--- a/CropYieldStudy.html
+++ b/CropYieldStudy.html
@@ -80,10 +80,10 @@ a:hover {
 <p>Building off what I had done in GEO 309, I decided to do a larger, semester long independent study using GIS to predict yield in Corn and Soybeans with the same professor I had for 309, Dr. Liang. This project required me to write over 600 lines of Python in order to analyse over 360 sets of images the track 40 fields total. This was done in order to create a model of what index values crops with good and bad yield have.</p>
 
 <div class="big-image">
-<img src="Analyzing Remote Sensing Vegetation Indexes to Optimize Corn and Soybean Yield(1).png" alt="Analyzing Remote Sensing Vegetation Indexes to Optimize Corn and Soybean Yield(1).png">
+<img src="Analyzing Remote Sensing Vegetation Indexes to Optimize Corn and Soybean Yield.png" alt="Analyzing Remote Sensing Vegetation Indexes to Optimize Corn and Soybean Yield.png">
 </div>
 
-<h4><a href="Analyzing Remote Sensing Vegetation Indexes to Optimize Corn and Soybean Yield(1).png">Download</a></h4>
+<h4><a href="Analyzing Remote Sensing Vegetation Indexes to Optimize Corn and Soybean Yield.png">Download</a></h4>
 
 </body>
 </html>
