--- a/HaydenPortfolio.html
+++ b/HaydenPortfolio.html
@@ -153,7 +153,7 @@ a:hover
 <div class="header-image">
     <h1>Hayden Hancock</h1>
     <p class="subtitle">University of Kentucky, Class of 2025</p>
-	<p>School Email: hjha230@uky.edu</p>
+	<p class="subtitle">Transportation Director and GIS Specialist at the Lake Cumberland Area Development District</p>
     <p>Email: hayden.hancock.813@gmail.com</p>
 </div>
 
